--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.daxiang.propertyanimationdemo"
+    package="com.daxiang.propertyanimdemo"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.daxiang.propertyanimdemo.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -24,24 +24,24 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.daxiang.propertyanimationdemo.animation.RotationActivity"
+            android:name="com.daxiang.propertyanimdemo.animation.RotationActivity"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".animation.TranslateActivity"
+            android:name="com.daxiang.propertyanimdemo.animation.TranslateActivity"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".animation.SystemEvaluator"
-            android:theme="@style/FullScreenTheme"
+            android:name="com.daxiang.propertyanimdemo.animation.SystemEvaluator"
+            android:screenOrientation="portrait"
+            android:theme="@style/FullScreenTheme" >
+        </activity>
+        <activity
+            android:name="com.daxiang.propertyanimdemo.animation.CustomEvaluator"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".animation.CustomEvaluator"
-            android:screenOrientation="portrait" >
-        </activity>
-        <activity
-            android:name=".animation.StickyAnimActivity"
+            android:name="com.daxiang.propertyanimdemo.animation.StickyAnimActivity"
             android:screenOrientation="portrait" >
         </activity>
     </application>
