--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -44,6 +44,10 @@
             android:name="com.daxiang.propertyanimdemo.animation.StickyAnimActivity"
             android:screenOrientation="portrait" >
         </activity>
+        <activity
+            android:name="com.daxiang.propertyanimdemo.animation.WaveViewActivity"
+            android:screenOrientation="portrait" >
+        </activity>
     </application>
 
 </manifest>
