--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.daxiang.propertyanimdemo"
+    package="com.daxiang.customviews"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="14"
-        android:targetSdkVersion="19" />
+        android:minSdkVersion="15"
+        android:targetSdkVersion="21" />
 
     <application
         android:allowBackup="true"
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.daxiang.propertyanimdemo.MainActivity"
+            android:name="com.daxiang.customviews.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait" >
             <intent-filter>
@@ -24,32 +24,32 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.daxiang.propertyanimdemo.animation.RotationActivity"
+            android:name="com.daxiang.customviews.activity.RotationActivity"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name="com.daxiang.propertyanimdemo.animation.TranslateActivity"
+            android:name="com.daxiang.customviews.activity.TranslateActivity"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name="com.daxiang.propertyanimdemo.animation.SystemEvaluator"
+            android:name="com.daxiang.customviews.activity.SystemEvaluator"
             android:screenOrientation="portrait"
             android:theme="@style/FullScreenTheme" >
         </activity>
         <activity
-            android:name="com.daxiang.propertyanimdemo.animation.CustomEvaluator"
+            android:name="com.daxiang.customviews.activity.CustomEvaluator"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name="com.daxiang.propertyanimdemo.animation.StickyAnimActivity"
+            android:name="com.daxiang.customviews.activity.StickyAnimActivity"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name="com.daxiang.propertyanimdemo.animation.WaveViewActivity"
+            android:name="com.daxiang.customviews.activity.WaveViewActivity"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name="com.daxiang.propertyanimdemo.animation.FlowLayoutActivity"
+            android:name="com.daxiang.customviews.activity.FlowLayoutActivity"
             android:screenOrientation="portrait" >
         </activity>
     </application>
